--- a/index.html
+++ b/index.html
@@ -1229,11 +1229,11 @@
   <article id="veintetres" class="post invert style1 alt">
     <div class="image">
       <img
-        src="images/estado/1.jpg"
+        src="images/OsmDroid/osmdroid1.png"
         alt=""
         width="70"
         height="100"
-        data-position="80% center"
+        data-position="40% center"
       />
     </div>
     <div class="content">
@@ -1241,24 +1241,25 @@
         <header>
           <!--Apuntar al html con el nombre de la clase-->
           <h2>
-            <a href="sites/alarmasyestado.html">OsmDroid</a>
+            <a href="sites/OsmDroid.html">OsmDroid</a>
           </h2>
           <!--Fecha de la clase-->
-          <p class="info">4 de Enero de 2021</p>
+          <p class="info">11 de Enero de 2021</p>
         </header>
         <!--Pequeña descripcion del tema-->
         <p align="justify">
-          Un dispositivo Android que está inactivo se suspende rápidamente.
-          Sin embargo, hay situaciones en las que una app necesita activar la
-          pantalla o la CPU y mantenerla encendida para completar algunas
-          tareas. Las alarmas ofrecen una manera de realizar operaciones
-          programadas fuera del ciclo de vida de tu app. Por ejemplo, puedes
-          usar una alarma a fin de comenzar una operación prolongada
+         OSMDroid (OpenStreetMap) es una librería que brinda un servicio de mapas que
+			permite incluirlos en las aplicaciones desarrolladas.
+			Permite obtener mapas offline.
+			Tiene la posibilidad de agregar controles como por ejemplo controles zoom. Esto se lo
+			realiza gracias a métodos.
+			Permite añadir información a los mapas, para lo cual se usa los Overlays o capas. Con
+			la utilización de ItemizedOverlayWithFocus se puede incluir globos de información.
         </p>
         <ul class="actions">
           <!--Apuntar al html con el nombre de la clase-->
           <li>
-            <a href="sites/alarmasyestado.html" class="button alt"
+            <a href="sites/OsmDroid.html" class="button alt"
               >Leer más</a
             >
           </li>
