--- a/index.html
+++ b/index.html
@@ -1384,10 +1384,10 @@
 
 
   <!-- veinte y seis -->
-  <article id="veintecuatro" class="post style2">
+  <article id="veinteseis" class="post style2">
     <div class="image">
       <img
-        src="images/2plano/index.jpg"
+        src="images/bluetooth/b_3.png"
         alt=""
         width="70%"
         height="159"
@@ -1399,18 +1399,16 @@
         <header>
           <!--Apuntar al html con el nombre de la clase-->
           <h2>
-            <a href="sites/process 2 plano.html"
+            <a href="sites/Bluetooth.html"
               >Bluetooth</a
             >
           </h2>
           <!--Fecha de la clase-->
-          <p class="info">04 de enero de 2021</p>
+          <p class="info">14 de enero de 2021</p>
         </header>
         <!--Pequeña descripcion del tema-->
         <p align="justify">
-          El procesamiento de datos en segundo plano es una parte importante a
-          la hora de crear una aplicación que sea eficaz para los usuarios y
-          funcione de manera adecuada en la plataforma de Android.
+          La plataforma de Android incluye compatibilidad con la pila de red Bluetooth, la cual permite que un dispositivo intercambie datos de manera inalámbrica con otros dispositivos Bluetooth. El marco de trabajo de la aplicación proporciona acceso a la funcionalidad Bluetooth mediante las API de Bluetooth de Android. Estas API permiten a las aplicaciones conectarse de manera inalámbrica con otros dispositivos Bluetooth y habilitan las funciones inalámbricas punto a punto y multipunto.
         </p>
 
         <ul class="actions">
@@ -1424,11 +1422,11 @@
       </div>
       <div class="postnav">
         <!--Poner el numero de id anterior-->
-        <a href="#diecinueve" class="scrolly prev"
+        <a href="#veintecinco" class="scrolly prev"
           ><span class="icon fa-chevron-up"></span
         ></a>
         <!--Poner el numero de id siguiente si no hay poner vacio y revisar que el anterior div apunte a esta clase-->
-        <a href="#veinteuno" class="scrolly next"
+        <a href="#veintesiete" class="scrolly next"
           ><span class="icon fa-chevron-down"></span
         ></a>
       </div>
