--- a/sites/Bluetooth.html
+++ b/sites/Bluetooth.html
@@ -216,6 +216,8 @@
     <ul><li> <b>RESULT_CANCEL</b> </li></ul>
 
     <img src="../images/bluetooth/b_4.jpg" class="text-center" width="450px" alt="" height="300px" />
+
+    <h4>Dispositivos emparejados(paired)</h4>
     
   
        
