cambios link y agregar pagina perdida

--- a/sites/alarmasyestado.html
+++ b/sites/alarmasyestado.html
@@ -110,7 +110,7 @@
         >Anterior</a
       >
       <a
-        href="../index.html"
+        href="ubicacion.html"
         style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a
       >
@@ -390,7 +390,7 @@
         >Anterior</a
       >
       <a
-        href="../index.html"
+        href="ubicacion.html"
         style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a
       >
