--- a/sites/googlemaps.html
+++ b/sites/googlemaps.html
@@ -105,12 +105,12 @@
 
     <div>
       <a
-        href="process 2 plano.html"
+        href="mapbox.html"
         style="float: left; background-color: black; padding: 1rem"
         >Anterior</a
       >
       <a
-        href="../index.html"
+        href="Bluetooth.html"
         style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a
       >
@@ -603,12 +603,12 @@
     </section>
     <div>
       <a
-        href="process 2 plano.html"
+        href="mapbox.html"
         style="float: left; background-color: black; padding: 1rem"
         >Anterior</a
       >
       <a
-        href="../index.html"
+        href="Bluetooth.html"
         style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a
       >
