--- a/sites/mapbox.html
+++ b/sites/mapbox.html
@@ -24,12 +24,12 @@
 
     <div>
       <a
-        href="redes.html"
+        href="OsmDroid.html"
         style="float: left; background-color: black; padding: 1rem"
         >Anterior</a
       >
       <a
-        href="segundoplano.html"
+        href="googlemaps.html"
         style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a
       >
@@ -518,12 +518,12 @@ Las  API, SDK y datos de mapas de actualización en vivo brindan a los desarroll
     </section>
     <div>
       <a
-        href="redes.html"
+        href="OsmDroid.html"
         style="float: left; background-color: black; padding: 1rem"
         >Anterior</a
       >
       <a
-        href="segundoplano.html"
+        href="googlemaps.html"
         style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a
       >
