--- a/sites/ubicacion.html
+++ b/sites/ubicacion.html
@@ -21,10 +21,14 @@
     </header>
 
     <div>
-      <a href="" style="float: left; background-color: black; padding: 1rem"
+      <a
+        href="alarmasyestado.html"
+        style="float: left; background-color: black; padding: 1rem"
         >Anterior</a
       >
-      <a href="" style="float: right; background-color: black; padding: 1rem"
+      <a
+        href="OsmDroid.html"
+        style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a
       >
     </div>
@@ -470,10 +474,14 @@
       </div>
     </section>
     <div>
-      <a href="" style="float: left; background-color: black; padding: 1rem"
+      <a
+        href="alarmasyestado.html"
+        style="float: left; background-color: black; padding: 1rem"
         >Anterior</a
       >
-      <a href="" style="float: right; background-color: black; padding: 1rem"
+      <a
+        href="OsmDroid.html"
+        style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a
       >
     </div>
