--- a/sites/touchscreen1.html
+++ b/sites/touchscreen1.html
@@ -24,12 +24,12 @@
 
     <div>
       <a
-        href="./servicios.html"
+        href="Bluetooth.html"
         style="float: left; background-color: black; padding: 1rem"
         >Anterior</a
       >
       <a
-        href="touchscreen2.html"
+        href="sensores.html"
         style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a
       >
@@ -167,12 +167,12 @@ alternativa a capturar eventos de teclas a través de tu vista, también puedes 
     </section>
     <div>
       <a
-        href="./servicios.html"
+        href="Bluetooth.html"
         style="float: left; background-color: black; padding: 1rem"
         >Anterior</a
       >
       <a
-        href="touchscreen2.html"
+        href="sensores.html"
         style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a
       >
