--- a/sites/Bluetooth.html
+++ b/sites/Bluetooth.html
@@ -110,7 +110,7 @@
         >Anterior</a
       >
       <a
-        href="/sites/touchscreen.html"
+        href="touchscreen1.html"
         style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a
       >
@@ -232,7 +232,7 @@
         >Anterior</a
       >
       <a
-        href="/sites/touchscreen.html"
+        href="touchscreen1.html"
         style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a
       >
