--- a/sites/touchscreen.html
+++ b/sites/touchscreen.html
@@ -29,7 +29,7 @@
         >Anterior</a
       >
       <a
-        href="./alarmasyestado.html"
+        href="sensores.html"
         style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a
       >
@@ -185,7 +185,7 @@
         >Anterior</a
       >
       <a
-        href="./alarmasyestado.html"
+        href="sensores.html"
         style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a
       >
