--- a/index.html
+++ b/index.html
@@ -1760,7 +1760,7 @@
     
     
     <!-- trinta y dos -->
-    <article id="veinteocho" class="post style2">
+    <article id="treintados" class="post style2">
       <div class="image">
         <img
           src="images/FLUTTER/in.JPG"
